# timeseries

./: .gitignore  README.md  pyproject.toml  test_pipeline.py  test_pipeline_optuna.py
configs/: data_input.yaml  models.yaml  pipeline.yaml  plots.yaml  preprocessing.yaml
configs_optuna/: models.yaml  output.yaml  preprocessing.yaml
data/input/: demand.xlsx  demand_optuna.xlsx  features2.xlsx
output/models/20260126_2300/: Product_B_SARIMA_params.json  Product_C_SARIMA_params.json
output/models/20260126_2301/: Product_A_HoltWinters_params.json  Product_A_SARIMA_params.json
output/models/20260126_2308/: Product_A_SARIMA_params.json  Product_B_SARIMA_params.json  Product_C_SARIMA_params.json
output/models/20260126_2309/: Product_A_Chronos_params.json
output/results/: ensemble_forecasts.xlsx  model_results.xlsx
output/results/20260126_2258/: ensemble_forecasts.xlsx  model_results.xlsx
output/results/20260126_2300/: ensemble_forecasts.xlsx  model_results.xlsx
output/results/20260126_2301/: ensemble_forecasts.xlsx  model_results.xlsx
output/results/20260126_2306/: ensemble_forecasts.xlsx  model_results.xlsx
output/results/20260126_2308/: ensemble_forecasts.xlsx  model_results.xlsx
output/results/20260126_2309/: ensemble_forecasts.xlsx  model_results.xlsx  ~$model_results.xlsx
src/forecast/: __init__.py  main.py  pipeline.py  pipeline_common.py  pipeline_multivariate_all.py  pipeline_multivariate_single.py  pipeline_univariate.py
src/forecast/data/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py  test_full_pipeline.py  test_pipeline_cases.py
(+39 files in other folders)
