[project]
name = "demand-forecast"
version = "0.1.0"
description = "Modular demand forecasting platform with ensemble methods"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
optuna = ["optuna>=3.5"]
chronos = ["torch>=2.0", "chronos-forecasting>=1.0"]
all = ["optuna>=3.5", "torch>=2.0", "chronos-forecasting>=1.0"]

[project.scripts]
forecast = "forecast.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forecast"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
